# PetrobrasProject

./: .gitignore  README.md
src/: .py  main.py  pyproject.toml  util.py
src/conf/: official_dates.txt
src/dataset/: BRASIL-2022-08-07-2022-08-13.csv  CAPITAIS-2022-08-07-2022-08-13.csv  ESTADOS-2022-08-07-2022-08-13.csv  MUNICIPIOS-2022-07-31-2022-08-06.csv  MUNICIPIOS-2022-08-07-2022-08-13.csv  MUNICIPIOS-2022-08-14-2022-08-20.csv  REGIOES-2022-08-07-2022-08-13.csv  petrobras-2022-07-31-2022-08-06.xlsx  petrobras-2022-08-07-2022-08-13.xlsx  petrobras-2022-08-14-2022-08-20.xlsx
src/extract/: break_xls_to_csv.py  download_xls.py  extract.py
