[tool.poetry]
name = "petrobrasproject"
version = "0.1.0"
description = ""
authors = ["gerson.scheffer <gerson.scheffer@poatek.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Scrapy = "^2.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
