[tool.poetry]
name = "petrobrasproject"
version = "0.1.0"
description = ""
authors = ["gerson.scheffer <gerson.scheffer@poatek.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.3"
ipykernel = "^6.15.2"
openpyxl = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
